tests/baselines/reference/jsFileClassPropertyType.errors.txt
bar.ts(1,1): error TS2322: Type 'string' is not assignable to type 'number'.


==== foo.js (0 errors) ====
    class C {
      constructor () {
          this.p = 0;
      }
    }
    
==== bar.ts (1 errors) ====
    (new C()).p = "string";
    ~~~~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    